# Symbolic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/: 01_basic_usage.cpp  02_user_defined_functions.cpp  03_AST_debugging.cpp  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/Symbolic/Core/: Core.hpp  Types.hpp
lib/include/Symbolic/Core/AST/: BinaryNode.hpp  BinaryOperatorNode.hpp  Expression.hpp  NaryNode.hpp  NaryOperatorNode.hpp  Node.hpp  NodeStorage.hpp  Symbol.hpp  SymbolContext.hpp  SymbolTable.hpp  UnaryNode.hpp  UnaryOperatorNode.hpp  Value.hpp
lib/include/Symbolic/Core/AST/Nodes/: BinaryOperatorNode.hpp  Division.hpp  FunctionNode.hpp  NaryOperatorNode.hpp  Negative.hpp  Node.hpp  Power.hpp  Product.hpp  Sum.hpp  Symbol.hpp  UnaryOperatorNode.hpp  Value.hpp
lib/include/Symbolic/Core/AbstractStructure/: BinaryNode.hpp  Expression.hpp  NaryNode.hpp  Symbol.hpp  SymbolContext.hpp  UnaryNode.hpp  Value.hpp
lib/include/Symbolic/Core/Algorithms/: ASTDebugInfo.hpp  ASTVisitor.hpp  DeepCopy.hpp  Evaluator.hpp  SimplifyTrivial.hpp
lib/include/Symbolic/Core/ArithmeticalOperations/: Division.hpp  Negative.hpp  Power.hpp  Product.hpp  Sum.hpp
lib/include/Symbolic/Core/Expression/: Expression.hpp
lib/include/Symbolic/Core/Functions/: CommonFunctions.hpp  Function.hpp  FunctionNode.hpp
lib/include/Symbolic/Core/Ops/: Cos.hpp  Division.hpp  Exp.hpp  Negative.hpp  Power.hpp  Product.hpp  Sin.hpp  Sum.hpp  Tan.hpp
lib/src/Core/AST/: Expression.cpp  SymbolContext.cpp
lib/src/Core/AST/Nodes/: Division.cpp  Power.cpp  Product.cpp  Sum.cpp
lib/src/Core/AbstractStructure/: Expression.cpp  SymbolContext.cpp
lib/src/Core/Algorithms/: ASTDebugInfo.cpp  ASTDebugInfoImpl.cpp  ASTDebugInfoImpl.hpp  DeepCopy.cpp  DeepCopyImpl.cpp  DeepCopyImpl.hpp  Evaluator.cpp  EvaluatorImpl.cpp  EvaluatorImpl.hpp  SimplifyTrivial.cpp  SimplifyTrivialImpl.cpp  SimplifyTrivialImpl.hpp
lib/src/Core/ArithmeticalOperations/: Division.cpp  Power.cpp  Product.cpp  Sum.cpp
lib/src/Core/Expression/: Expression.cpp
lib/src/Core/Functions/: CommonFunctions.cpp
lib/src/Core/Math/: Division.cpp  Power.cpp  Product.cpp  Sum.cpp
lib/src/Core/Ops/: Division.cpp  Power.cpp  Product.cpp  Sum.cpp
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt  test_Core_MathCorrectness.cpp
tests/Core/AST/: CMakeLists.txt  test_Core_AST_Symbol.cpp  test_Core_AST_Value.cpp
tests/Core/Algorithms/: CMakeLists.txt  test_Core_Algorithms_DeepCopy.cpp  test_Core_Algorithms_Evaluator.cpp  test_Core_Algorithms_SimplifyTrivial.cpp
tests/Core/Ops/: CMakeLists.txt  test_Core_Ops_Division.cpp  test_Core_Ops_Negative.cpp  test_Core_Ops_Power.cpp  test_Core_Ops_Product.cpp  test_Core_Ops_Sum.cpp
